# Voxel-Tracer

./: .gitignore  .gitmodules  CMakeLists.txt
Voxel-Tracer/: CMakeLists.txt
Voxel-Tracer/assets/: temp.comp  traverse.comp
Voxel-Tracer/src/: MainApp.cpp  MainLayer.cpp  MainLayer.h  VoxelCamera.h
